--- a/style.css
+++ b/style.css
@@ -316,20 +316,9 @@
       position: relative;
       overflow: hidden;
       padding-top: 70px;
-      background-color: #000000;
+      background: linear-gradient(to bottom, #9cafec, #ffffff);
   }
-  
-  /* New Canvas Background */
-  #particleCanvas {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
-      pointer-events: none; /* Let clicks pass through */
-  }
-  
+
   .hero-content {
       position: relative;
       z-index: 1;
@@ -365,6 +354,8 @@
       color: var(--text-secondary);
       margin-bottom: 15px;
       min-height: 40px;
+      font-weight: 500;
+      color: #000000;
   }
   
   .typing-text {
@@ -415,8 +406,8 @@
   
   .btn-secondary {
       background: transparent;
-      color: var(--text-primary);
-      border: 2px solid var(--primary-color);
+      color: rgb(0, 0, 3);
+      border: 3px solid var(--primary-color);
   }
   
   .btn-secondary:hover {
