--- a/style.css
+++ b/style.css
@@ -762,6 +762,63 @@ body {
     transform: translateY(-3px);
 }
 
+/* --- NEW QUOTE SECTION DESIGN --- */
+.quote-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 90px;
+    width: 100%;
+    align-items: center;
+}
+
+.quote-card {
+    background: transparent;
+    
+    padding: 40px 60px;
+    border-radius: 24px;
+    max-width: 800px;
+    width: 90%;
+    position: relative;
+    box-shadow: 0 10px 30px rgba(43, 238, 36, 0.904);
+}
+
+.quote-icon {
+    color: blue;
+    margin-bottom: 25px;
+    line-height: 1;
+}
+
+.quote-icon svg {
+    width: 60px;
+    height: 50px;
+    fill: currentColor;
+}
+
+.quote-text {
+    font-size: 2rem;
+    color: black;
+    line-height: 1.4;
+    margin-bottom: 30px;
+}
+
+.quote-author {
+    text-align: right;
+    font-weight: 700;
+    color: #1575fd;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    font-size: 1.9rem;
+}
+
+.author-line {
+    width: 50px;
+    height: 4px;
+    background-color: rgba(37, 124, 146, 0.623);
+    margin-top: 10px;
+    border-radius: 2px;
+}
+
 /* Projects Section */
 .projects {
     /* UPDATED: Transparent background */
@@ -1568,6 +1625,15 @@ body {
         flex-direction: column;
         gap: 20px;
         text-align: center;
+    }
+
+    /* Mobile Quote */
+    .quote-card {
+        padding: 30px;
+    }
+    
+    .quote-text {
+        font-size: 1.5rem;
     }
 }
 
